--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <a-scene embedded arjs>
       <a-marker preset="hiro">
         <!-- Box -->
-        <a-box position="0 0.5 0" material="color: blue;"></a-box>
-        <a-sphere position="1 0.5 0" material="color: blue;"></a-sphere>
+<!--         <a-box position="0 0.5 0" material="color: blue;"></a-box> -->
+<!--         <a-sphere position="1 0.5 0" material="color: blue;"></a-sphere> -->
         <a-cylinder position="2 0.5 0" material="color: blue;"></a-cylinder>
-        <a-plane position="3 0.5 0" material="color: blue;"></a-cylinder>
+<!--         <a-plane position="3 0.5 0" material="color: blue;"></a-cylinder> -->
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
