--- a/index.html
+++ b/index.html
@@ -3,18 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>Praktikum AR.js</title>
+
+    <!-- Load A-Frame and AR.js -->
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ar.js/2.2.2/aframe-ar.min.js"></script>
+
+    <style>
+      body { margin: 0; overflow: hidden; }
+      a-scene { width: 100vw; height: 100vh; }
+    </style>
   </head>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ar.js/2.2.2/aframe-ar.min.js"></script>
-  <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs>
+  <body>
+    <a-scene embedded arjs="sourceType: webcam;">
       <a-marker preset="hiro">
         <!-- Box -->
-<!--         <a-box position="0 0.5 0" material="color: blue;"></a-box> -->
-<!--         <a-sphere position="1 0.5 0" material="color: blue;"></a-sphere> -->
-        <a-cylinder position="2 0.5 0" material="color: blue;"></a-cylinder>
-<!--         <a-plane position="3 0.5 0" material="color: blue;"></a-cylinder> -->
+        <a-box position="-1 0.5 0" material="color: blue;"></a-box>
+
+        <!-- Sphere -->
+        <a-sphere position="0 0.5 0" radius="0.5" material="color: red;"></a-sphere>
+
+        <!-- Cylinder -->
+        <a-cylinder position="1 0.5 0" radius="0.3" height="1" material="color: green;"></a-cylinder>
+
+        <!-- Plane -->
+        <a-plane position="2 0 0" rotation="-90 0 0" width="1" height="1" material="color: yellow;"></a-plane>
       </a-marker>
+
+      <!-- Lighting (optional for better visibility) -->
+      <a-entity light="type: directional; color: white; intensity: 1" position="0 4 1"></a-entity>
+
       <a-entity camera></a-entity>
     </a-scene>
   </body>
